<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <com.isoftston.issuser.conchapp.weight.NavBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav"/>

    <TextView
        android:layout_marginTop="100dp"
        style="@style/text_normal"
        android:text="@string/forget_password"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/et_login_bg"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/email_gray"
            />
        <EditText
            style="@style/edit_normal"
            android:id="@+id/et_email"
            android:hint="@string/forget_password_input_hint"
            android:inputType="textEmailAddress"
            android:layout_height="@dimen/nav_height"
            android:paddingLeft="15dp"/>


    </LinearLayout>
    <TextView
        style="@style/text_normal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/forget_password_hint"
        android:textSize="@dimen/text_small"
        android:textColor="@color/text_gray"
        android:id="@+id/tv_hint"
        />
    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:text="@string/forget_password_sned_link"
        android:background="@drawable/tv_write_bg"
        android:textSize="@dimen/text_normal"
        android:gravity="center"
        android:id="@+id/tv_send"
        android:textColor="@color/white"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        />
</LinearLayout>