<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_blue"
    >

    <com.isoftston.issuser.conchapp.weight.NavBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ll_corner_white_bg"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    >
                    <TextView
                        android:layout_centerVertical="true"
                        style="@style/text_normal"
                        android:text="@string/check_manager_device_no"
                        android:textColor="@color/black"
                        />
                    <TextView
                        style="@style/text_normal"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="24245"
                        />
                </RelativeLayout>
                <View
                    style="@style/view_line"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    >
                    <TextView
                        android:layout_centerVertical="true"
                        style="@style/text_normal"
                        android:text="@string/check_manager_device_name"
                        android:textColor="@color/black"
                        />
                    <TextView
                        style="@style/text_normal"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="xxx"
                        />
                </RelativeLayout>
                <View
                    style="@style/view_line"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    >
                    <TextView
                        android:layout_centerVertical="true"
                        style="@style/text_normal"
                        android:text="@string/danger_work_phone"
                        android:textColor="@color/black"
                        />
                    <TextView
                        style="@style/text_normal"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="100-58841545"
                        />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout style="@style/ll_danger_style"
                android:id="@+id/ll_safety_point">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/danger_work_icon_1"
                    />
                <TextView
                   style="@style/text_normal"
                    android:layout_marginLeft="15dp"
                    android:text="@string/danger_work_safety_point"
                    />
            </LinearLayout>
            <LinearLayout style="@style/ll_danger_style"
                android:id="@+id/ll_damage_type">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/danger_work_icon_2"
                    />
                <TextView
                    style="@style/text_normal"
                    android:layout_marginLeft="15dp"
                    android:text="@string/danger_work_damage_type"
                    />
            </LinearLayout>
            <LinearLayout style="@style/ll_danger_style"
                android:id="@+id/ll_accident">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/danger_work_icon_3"
                    />
                <TextView
                    style="@style/text_normal"
                    android:layout_marginLeft="15dp"
                    android:text="@string/danger_work_accident"
                    />
            </LinearLayout>
            <LinearLayout style="@style/ll_danger_style"
                android:id="@+id/ll_accident_eg">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/danger_work_icon_1"
                    />
                <TextView
                    style="@style/text_normal"
                    android:layout_marginLeft="15dp"
                    android:text="@string/danger_work_accident_eg"
                    />
            </LinearLayout>
            <LinearLayout style="@style/ll_danger_style"
                android:id="@+id/ll_check_rules">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/danger_work_icon_1"
                    />
                <TextView
                    style="@style/text_normal"
                    android:layout_marginLeft="15dp"
                    android:text="@string/danger_work_action_rules"
                    />
            </LinearLayout>
            <LinearLayout style="@style/ll_danger_style"
                android:id="@+id/ll_manager_system">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/danger_work_icon_1"
                    />
                <TextView
                    style="@style/text_normal"
                    android:layout_marginLeft="15dp"
                    android:text="@string/danger_work_manager_system"
                    />
            </LinearLayout>
            <LinearLayout style="@style/ll_danger_style"
                android:id="@+id/ll_approval_system">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/danger_work_icon_1"
                    />
                <TextView
                    style="@style/text_normal"
                    android:layout_marginLeft="15dp"
                    android:text="@string/danger_work_approval_system"
                    />
            </LinearLayout>
            <LinearLayout style="@style/ll_danger_style"
                android:id="@+id/ll_eneger_system">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/danger_work_icon_1"
                    />
                <TextView
                    style="@style/text_normal"
                    android:layout_marginLeft="15dp"
                    android:text="@string/danger_work_eneger_system"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>