<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.isoftston.issuser.conchapp.weight.NavBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav" />
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textColor="#000"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:text="@string/start_work_time"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="2017-5-12     07:50"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c6c1c1"></View>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textColor="#000"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:text="@string/end_work_time"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="2017-5-12     07:50"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c6c1c1"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_corner_green1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:text="@string/keeper"/>
        <EditText
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:background="@drawable/shape_corner_green2"
            android:textSize="12sp"
            android:hint="@string/manager_fix"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:textColor="#000"
            android:textSize="14sp"
            android:text="@string/checker"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/someone"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c6c1c1"></View>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="10dp"
            android:text="@string/authorize"
            android:textColor="#000"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:padding="10dp"
            android:text="蔡某某"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_10"
            android:textSize="14sp"
            android:id="@+id/textView" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c6c1c1"></View>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/shape_corner_green"/>
</LinearLayout>